--- a/app/src/main/res/layout/fragment_waiting_expenses.xml
+++ b/app/src/main/res/layout/fragment_waiting_expenses.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.manager.WaitingExpensesFragment">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_filter"
         layout="@layout/filter_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -19,6 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_filter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
